--- a/data/site.toml
+++ b/data/site.toml
@@ -1,3 +1,4 @@
 [tagDescription]
    Go = 'New go description in data folder'
    php = 'From data folder PHP is the most populer language for web developemnt.'
+   bbw = 'Big beautiful woman'
