--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://www.pornstar.monster/'
+baseURL = 'https://videos.pornstar.monster/'
 languageCode = 'en-us'
 title = 'Pornstar.Monster'
 
