--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://videos.pornstar.monster/'
 languageCode = 'en-us'
-title = 'Pornstar.Monster'
+title = 'Videos Pornstar.Monster'
 
 
 theme = 'lightbi-hugo'
